samples/_failures_safe/1761516170_5458f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb823bd4.c: In function ‘main’:
./samples/SAFE/__tmp_fb823bd4.c:131:30: error: missing terminating " character
  131 |         int rows2 = read_int("Enter rows for matrix 2 (
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fb823bd4.c:131:9: error: expected expression at end of input
  131 |         int rows2 = read_int("Enter rows for matrix 2 (
      |         ^~~
./samples/SAFE/__tmp_fb823bd4.c:131:21: error: too few arguments to function ‘read_int’
  131 |         int rows2 = read_int("Enter rows for matrix 2 (
      |                     ^~~~~~~~
./samples/SAFE/__tmp_fb823bd4.c:58:5: note: declared here
   58 | int read_int(const char *prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_fb823bd4.c:131:9: error: expected declaration or statement at end of input
  131 |         int rows2 = read_int("Enter rows for matrix 2 (
      |         ^~~
./samples/SAFE/__tmp_fb823bd4.c:131:9: error: expected declaration or statement at end of input
